syntax = "proto3";
package message;

option go_package = "proto/message;message";

message Message {
  string Log = 1;
  int32 Num = 2;
}

service MessageService {
  rpc SendMessage(Message) returns (Message) {} // Оправить x получить x*2
  rpc SumOfNumbers(stream Message) returns (Message) {} // Оправить 1, 2, 3, 4 получить сумму = 10
  rpc Factorial(Message) returns (stream Message) {} // Отправить 5 получить 4 3 2 1
  rpc XPow2Chat(stream Message) returns (stream Message) {} // Отправить 1 2 5 получить 1 4 25
}